# stt_rl_env

./: .gitignore  IMPLEMENTATION_SUMMARY.txt  README.md  STATUS.py  WHY_THIS_ENVIRONMENT_WORKS.md  main.py  pyproject.toml  requirements.txt  run_episode.py  run_pipeline.py  test_whisper_baseline.py  trajectory.json
agent/: llm_agent.py  mock_agent.py  parser.py  prompt.py
data/: loader.py  split_indices.json
env/: actions.py  environment.py  reward.py  state.py
judge/: judge.py
training/: config.py  eval.py  eval_real.py  model.py  trainer.py
